@@ -21,6 +21,12 @@
     </text>
   </lang>
   <autodetect>
+    <usb>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>hp LaserJet 1160 series</model>
+      <description>Hewlett-Packard LaserJet 1160 series</description>
+      <commandset>PJL,MLC,BIDI-ECP,PCL,DW-PCL</commandset>
+    </usb>
   </autodetect>
   <functionality>A</functionality>
   <driver>hpijs</driver>
