@@ -1,5 +1,8 @@
 2006-11-29  Tim Waugh  <twaugh@redhat.com>
 
+	* printer/HP-LaserJet_1160.xml: Added IEEE 1284 information (RH
+	bug #215010).
+
 	* printer/Samsung-ML-1610.xml: This model does not support
 	PostScript (RH bug #195801).
 
